fixed button spacing in toolbar

--- a/src/components/ToolBar/index.scss
+++ b/src/components/ToolBar/index.scss
@@ -23,6 +23,8 @@
   background-color: v(button-flush-background-color);
   font-family: v(font-family-regular);
 
+  // we want it to be 8px, but 2 * 4px stack up to 8px anyways
+  margin: 0px $margin-smaller 0px $margin-smaller;
   border-radius: $border-radius-regular;
   padding: 0px $padding-regular 0px $padding-regular;
   height: $tool-bar-button-height;
